# crpc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: abi.rs  cache.rs  chainlist.rs  chainlist_tests.rs  config.rs  etherscan.rs  format.rs  main.rs  rpc.rs  tokens.rs
src/commands/: abi.rs  abi_check.rs  allowance.rs  balance.rs  balance_slot.rs  batch.rs  block.rs  call.rs  chains.rs  code.rs  config_cmd.rs  cost.rs  decode.rs  diff.rs  encode.rs  gas.rs  history.rs  init.rs  logs.rs  mapping_slot.rs  mod.rs  pools.rs  selectors.rs  simulate.rs  storage.rs  trace.rs  transfers.rs  tx.rs  verify.rs
