[package]
name = "crpc"
version = "0.9.6"
edition = "2024"
description = "Chain-aware RPC CLI — auto ABI encode/decode, 2600+ chains, Etherscan V2, batch Multicall3, and more"
license = "MIT"
repository = "https://github.com/agent-tools-org/crpc"
homepage = "https://github.com/agent-tools-org/crpc"
keywords = ["ethereum", "rpc", "cli", "blockchain", "web3"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[dependencies]
alloy = { version = "1", default-features = false, features = [
    "std",
    "provider-http",
    "rpc-types",
    "dyn-abi",
    "sol-types",
    "json-abi",
    "contract",
    "reqwest-rustls-tls",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
basic-toml = "0.1"
alloy-consensus = { version = "1", default-features = false, features = ["std"] }
dialoguer = { version = "0.11", default-features = false }

[profile.release]
opt-level = "z"        # optimize for size
lto = true             # link-time optimization — eliminates dead code across crates
codegen-units = 1      # single codegen unit — better optimization at cost of compile time
panic = "abort"        # no unwinding tables — saves ~100KB+
strip = true           # strip debug symbols and metadata
